# stf-hw

./: README.md  demo_3d_visualization.py  docker-compose.yml  pyproject.toml  requirements.txt  run_all.bat  run_all.sh  system_documentation.md  test.py  todo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: main.py
client/src/: App.tsx  index.css
client/src/pages/: Dashboard.tsx  Home.tsx
controller/: main_controller.py
dashboard/: app.py
dashboard/pages/: analytics.py  visualization_3d.py  visualization_3d_pyvista.py
database/: __init__.py  connection.py  models.py
docs/: 3D_VISUALIZATION.md  FACTORY_SPECS.md  HARDWARE_BRIDGE.md  INDUSTRY_4_0_COMPLIANCE.md  SQLITE_SETUP.md  SYSTEM_DOCUMENTATION.md
drizzle/: 0001_wooden_ultragirl.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
hardware/: mock_factory.py  mock_hbw.py
mosquitto/config/: mosquitto.conf
scripts/: demo_sensors.py  generate_history.py  test_kinematics.py
server/: db.ts  routers.ts  stf.test.ts
shared/: stf-types.ts
simulation/: README.md  docker-compose.yml  requirements.txt  run_simulation.sh
simulation/mosquitto/config/: mosquitto.conf
simulation/stf_warehouse/: __init__.py  config.py
simulation/stf_warehouse/controller/: __init__.py  main_controller.py
simulation/stf_warehouse/hardware/: __init__.py  mock_hbw.py
tests/: conftest.py  test_api_integration.py  test_conveyor_complete.py  test_factory_scenarios.py  test_kinematics.py
utils/: __init__.py  logging_config.py
